tests/health/gold/sdk/tests__lsp__bad_definition_test.toit.gold
tests/lsp/bad_definition_test.toit:48:3: error: Argument mismatch for 'fun'
Too few arguments provided
  fun
  ^~~
tests/lsp/bad_definition_test.toit:53:3: error: Argument mismatch for 'A'
Method does not take any arguments, but one was provided
  A 499
  ^
tests/lsp/bad_definition_test.toit:58:5: error: Argument mismatch for 'single'
Too few arguments provided
  A.single
    ^~~~~~
tests/lsp/bad_definition_test.toit:63:5: error: Argument mismatch for 'named'
Too few arguments provided
  A.named
    ^~~~~
tests/lsp/bad_definition_test.toit:68:5: error: Argument mismatch for 'foo'
Too few arguments provided
  A.foo
    ^~~
tests/lsp/bad_definition_test.toit:73:5: error: Argument mismatch for 'bar'
Too few arguments provided
  A.bar
    ^~~
tests/lsp/bad_definition_test.toit:78:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  A.fo
   ^
tests/lsp/bad_definition_test.toit:83:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  A.name
   ^
tests/lsp/bad_definition_test.toit:109:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  C.foo
   ^
tests/lsp/bad_definition_test.toit:78:5: error: Class 'A' does not have any method 'fo'
  A.fo
    ^~
tests/lsp/bad_definition_test.toit:83:5: error: Class 'A' does not have any method 'name'
  A.name
    ^~~~
tests/lsp/bad_definition_test.toit:88:7: error: Class 'A' does not have any method 'fo'
  (A).fo
      ^~
tests/lsp/bad_definition_test.toit:93:7: error: Class 'A' does not have any method 'name'
  (A).name
      ^~~~
tests/lsp/bad_definition_test.toit:99:5: error: Argument mismatch for 'C.foo'
Too few arguments provided
  c.foo
    ^~~
tests/lsp/bad_definition_test.toit:104:7: error: Argument mismatch for 'C.foo'
Too few arguments provided
  (C).foo
      ^~~
tests/lsp/bad_definition_test.toit:109:5: error: Argument mismatch for 'C.foo'
Too few arguments provided
  C.foo
    ^~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
